<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_ll"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="380dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/ed_mnemonic"
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/shape_edittext_white_bg"
                android:gravity="top"
                android:hint="@string/mnemonic_text_tip"
                android:minLines="5"
                android:textColorHint="@color/darkgray"
                android:textSize="14sp" />

            <org.angmarch.views.NiceSpinner
                android:id="@+id/nice_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray_f6" />

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/ed_pwd"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/darkgray"
                    android:textSize="14sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.9" />

                <com.alan.wallet.view.PasswordLevelView
                    android:id="@+id/pswd_level_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/ed_pwd"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/ed_pwd"
                    app:layout_constraintWidth_default="percent"
                    app:layout_constraintWidth_percent="0.1"
                    app:text_size_level="17dp" />

                <View
                    android:id="@+id/view_pwd_divide"
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_marginTop="16dp"
                    android:background="@color/gray_f6"
                    app:layout_constraintTop_toBottomOf="@id/ed_pwd"
                    tools:ignore="MissingConstraints" />


                <TextView
                    android:id="@+id/tv_pwd_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="11111"
                    android:visibility="gone"
                    app:layout_constraintTop_toBottomOf="@id/view_pwd_divide"
                    tools:ignore="MissingConstraints" />

            </android.support.constraint.ConstraintLayout>

            <EditText
                android:id="@+id/ed_ensure_pwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:digits="0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ~!@#$%^*&amp;()_+-="
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:textColorHint="@color/darkgray"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_f6" />

            <EditText
                android:id="@+id/ed_pwd_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@null"
                android:hint="@string/password_hint_option"
                android:inputType="text"
                android:textColorHint="@color/darkgray"
                android:textSize="14sp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray_f6" />


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <CheckBox
                    android:id="@+id/femaleGroupID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:button="@drawable/btn_radio_sel"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:paddingTop="5dp"
                    android:text="@string/agree_on_tip1"
                    android:textSize="14sp"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/text_userAgreement"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/agree_on_tip2"
                    android:textColor="@color/blue"
                    android:textSize="14sp"
                    app:layout_constraintBaseline_toBaselineOf="@id/femaleGroupID"
                    app:layout_constraintStart_toEndOf="@id/femaleGroupID" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>
    </ScrollView>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:text="@string/what_is_a_mnemonic"
        android:textColor="@color/blue"
        android:textSize="14sp" />


    <Button
        android:id="@+id/btn_Import"
        style="?android:borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_margin="16dp"
        android:background="@drawable/selector_btn_blue"
        android:enabled="false"
        android:text="@string/start_importing"
        android:textColor="@color/white" />


</RelativeLayout>
